--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "^3.2.2"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.3"
+    "@tailwindcss/forms": "^0.5.3",
+    "nuxt-icon": "^0.3.2"
   }
 }
