--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "^6.4.1",
+    "@types/node": "^20.4.0",
     "@vueuse/nuxt": "^9.13.0",
     "nuxt": "^3.2.2"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.8",
     "@tailwindcss/forms": "^0.5.3",
     "@vueuse/core": "^9.13.0",
-    "nuxt-icon": "^0.3.2"
+    "nuxt-icon": "^0.3.2",
+    "pinia": "^2.0.34"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
